[package]
name = "file_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
